# MD_Vision

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/EspHal/: CMakeLists.txt  EspHal.c  EspHal.h  esp32_new_hal.txt
components/GUI_drivers/: CMakeLists.txt  GUI_drivers.c  GUI_drivers.h
components/SPI_interface/: CMakeLists.txt  SPI_drivers.c  SPI_drivers.h
components/cJSON/: CMakeLists.txt  cJSON.h
components/camera/: CMakeLists.txt  camera.c  camera.h
components/init_tests/: CMakeLists.txt  init_tests.cpp  init_tests.h
components/rf_comms/: CMakeLists.txt  rf_comms.cpp  rf_comms.h
components/sd_card/: CMakeLists.txt  sd_card.c  sd_card.h
components/sync_objects/: CMakeLists.txt  sync_objects.c  sync_objects.h
components/test_component/: CMakeLists.txt
components/test_component/include/: test.h
components/test_component/src/: test.c
components/u8g2_hal/: CMakeLists.txt  u8g2_esp32_hal.c  u8g2_esp32_hal.h
components/wifi_comms/: CMakeLists.txt  wifi_comms.c  wifi_comms.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
